--- a/pom.xml
+++ b/pom.xml
@@ -57,6 +57,24 @@
 			<version>2.9.2</version>
 		</dependency>
 
+<!--for authorization-->
+		<dependency>
+			<groupId>org.springdoc</groupId>
+			<artifactId>springdoc-openapi-ui</artifactId>
+			<version>1.2.32</version>
+		</dependency>
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-security</artifactId>
+		</dependency>
+<!--		<dependency>-->
+<!--			<groupId>org.springdoc</groupId>-->
+<!--			<artifactId>springdoc-openapi-ui</artifactId>-->
+<!--			<version>1.2.32</version>-->
+<!--		</dependency>-->
+
+
+
 	</dependencies>
 
 	<build>
