--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -6,3 +6,7 @@ spring.jpa.hibernate.ddl-auto=update
 ### Hibernate Properties
 ## The SQL dialect makes Hibernate generate better SQL for the chosen database
 #spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL5InnoDBDialect
+
+springdoc.packagesToScan=com.example.demo
+
+#tokenSecret = jf9i4jgu83nfl0jfu57ejf7
