--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,6 @@
-spring.datasource.url=jdbc:mysql://localhost:3306/sys
-spring.datasource.username=root
-spring.datasource.password=myPassword24!
+#spring.datasource.url=jdbc:mysql://localhost:3306/sys
+#spring.datasource.username=root
+#spring.datasource.password=myPassword24!
 spring.jpa.hibernate.ddl-auto=update
 
 ### Hibernate Properties
@@ -10,3 +10,14 @@ spring.jpa.hibernate.ddl-auto=update
 springdoc.packagesToScan=com.example.demo
 
 #tokenSecret = jf9i4jgu83nfl0jfu57ejf7
+
+#Credentials for azure:
+logging.level.org.springframework.jdbc.core=DEBUG
+
+spring.datasource.url=\
+spring.datasource.username=\
+spring.datasource.password=\
+
+
+spring.datasource.initialization-mode=always
+
