--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,6 @@
-#spring.datasource.url=jdbc:mysql://localhost:3306/sys
-#spring.datasource.username=root
-#spring.datasource.password=myPassword24!
+#spring.datasource.url=
+#spring.datasource.username=
+#spring.datasource.password=
 spring.jpa.hibernate.ddl-auto=update
 
 ### Hibernate Properties
@@ -14,9 +14,9 @@ springdoc.packagesToScan=com.example.demo
 #Credentials for azure:
 logging.level.org.springframework.jdbc.core=DEBUG
 
-spring.datasource.url=jdbc:sqlserver://online-festival.database.windows.net:1433;database=onlineFestival;user=ligiaServerproject1@online-festival;password=onlineFestival1998;encrypt=true;trustServerCertificate=false;hostNameInCertificate=*.database.windows.net;loginTimeout=30;
-spring.datasource.username=ligiaServerproject1
-spring.datasource.password=onlineFestival1998
+spring.datasource.url=\
+spring.datasource.username=\
+spring.datasource.password=\
 
 
 spring.datasource.initialization-mode=always
